--- a/Server/Api/appsettings.Development.json
+++ b/Server/Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "AppSettings": {
-    "ConnectionString": "data source=localhost;initial catalog=WebApiCaseStudy;User Id=sa;Password=;MultipleActiveResultSets=True;App=EntityFramework"
+    "ConnectionString": "Server=.\\SQLExpress;Database=WebApiCaseStudy;User Id=sa;Password=1234;MultipleActiveResultSets=True;App=EntityFramework"
   }
 }
